samples/_failures_safe/1761295038_3bf2e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc86a1c5.c: In function ‘main’:
./samples/SAFE/__tmp_fc86a1c5.c:172:40: error: expected ‘)’ at end of input
  172 |         if (fgets(buffer, sizeof(buffer
      |                                 ~      ^
      |                                        )
./samples/SAFE/__tmp_fc86a1c5.c:172:13: error: too few arguments to function ‘fgets’
  172 |         if (fgets(buffer, sizeof(buffer
      |             ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_fc86a1c5.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_fc86a1c5.c:172:9: error: expected declaration or statement at end of input
  172 |         if (fgets(buffer, sizeof(buffer
      |         ^~
./samples/SAFE/__tmp_fc86a1c5.c:172:9: error: expected declaration or statement at end of input
